force-app/main/default/objects/XactlyExpress__XCTermsAndConditions__c/XactlyExpress__XCTermsAndConditions__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object. With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>XCTermsAndConditions</label>
    <nameField>
        <label>XCTermsAndConditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCTermsAndConditions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>