force-app/main/default/objects/XactlyExpress__XCTermsAndConditions__c/fields/XactlyExpress__FiscalYearId__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__FiscalYearId__c</fullName>
    <label>FiscalYearId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>