force-app/main/default/objects/XactlyExpress__XCTermsAndConditions__c/fields/XactlyExpress__TermsAndConditions__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__TermsAndConditions__c</fullName>
    <label>TermsAndConditions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>