force-app/main/default/objects/XactlyExpress__XCTermsAndConditions__c/fields/XactlyExpress__TermsAndConditionsRich__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__TermsAndConditionsRich__c</fullName>
    <label>TermsAndConditionsRich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>