force-app/main/default/objects/XactlyExpress__XCTermsAndConditions__c/fields/XactlyExpress__XCFiscalYearSettingsID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__XCFiscalYearSettingsID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XCFiscalYearSettingsID</label>
    <referenceTo>XactlyExpress__XCFiscalYearSettings__c</referenceTo>
    <relationshipLabel>XCTermsAndConditions</relationshipLabel>
    <relationshipName>XCTermsAndConditions</relationshipName>
    <type>Lookup</type>
</CustomField>